pollution-api.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pollution-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pollution-api
  template:
    metadata:
      labels:
        app: pollution-api
    spec:
      containers:
      - name: pollution-api-container
        image: quay.io/d3lirium/pollution-api:latest
---
apiVersion: v1
kind: Service
metadata:
  name: pollution-api-service
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: pollution-api
